| Bug #18472 | race condition between multiple mysqld's when setting up cluster/schema | ||
|---|---|---|---|
| Submitted: | 23 Mar 2006 21:44 | Modified: | 5 Apr 2006 6:31 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1.8 bk src | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[23 Mar 2006 21:44]
Tomas Ulin
[23 Mar 2006 21:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4093
[4 Apr 2006 10:05]
Tomas Ulin
peshed to 5.1.8
[5 Apr 2006 6:31]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.8 changelog. Closed.
