Bug #18472 race condition between multiple mysqld's when setting up cluster/schema - check that event is the correct one, and only delete if wrong version